# Ferronix

./: .nix.conf  CACHIX-SETUP.md  Cargo.toml  README.md  VERSIONING.md  cleanup-final.sh  cleanup.sh  ferronix-lima.yaml  flake.nix  package-lock.json  package.json  run-app.sh  shell.nix  welcome.sh
.cargo/: config.toml
.github/workflows/: auto-release.yml  ci.yml  release-combined.yml  release-unix.yml  release-windows.yml  release.yml
.zed/: settings.json  tasks.json
src/: main.rs
wasm/: Cargo.toml  README.md  index.html  serve.sh
wasm/src/: lib.rs
