[package]
name = "ferronix-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Harpool <tylerharpool@gmail.com>"]
description = "WebAssembly bindings for Ferronix"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"

# For console error logging
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]